fix overlapping footer over form in landscape mode and make design-adjustments to signup

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,10 @@ main {
 /* Sign Up page */
 #signup {
 	background: url(../images/pexels-shvets-production-7525118.webp) no-repeat center right / cover;
-	height: 100vh;
+	min-height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 #form {
@@ -194,6 +197,10 @@ footer > h5 {
 		column-count: 2;
 		column-gap: 0;
 	}
+
+	#form {
+		padding-bottom: 120px;
+	}
 }
 
 /* tablet screens and larger */
@@ -217,6 +224,7 @@ footer > h5 {
 	#photos {
 		column-count: 3;
 	}
+
 	#form {
 		background-color: transparent;
 		display: flex;
@@ -247,6 +255,11 @@ footer > h5 {
 	#menu a:hover {
 		border-bottom: 2px solid #000;
 	}
+
+	#signup {
+		justify-content: flex-start;
+	}
+
 
 	#form {
 		position: absolute;
